# competitive_programming_contest_template

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: a.cpp  a.hpp
tests/: test_a.cpp
